--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "remotetolocalimagevscode",
   "displayName": "Remote image to local",
+  "publisher": "TarekAufderStrasse",
   "description": "Extension that lets you automatically download and replace images with a local path. ",
   "version": "0.0.1",
   "icon": "images/icon.png",
@@ -49,17 +50,22 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
-  },
+    "test": "node ./test/runTest.js",  
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "test-compile": "tsc -p ./"
+},
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
     "@types/vscode": "^1.82.0",
+    "esbuild": "^0.19.4",
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
     "mocha": "^10.2.0",
-    "typescript": "^4.3.2",
     "vscode-test": "^1.5.2"
   },
   "dependencies": {
