--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Remote image to local",
   "publisher": "TarekAufderStrasse",
   "description": "Extension that lets you automatically download and replace images with a local path. ",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "icon": "images/icon.png",
   "repository": "https://github.com/codetakki/remoteToLocalimagevsCode",
   "engines": {
@@ -33,36 +33,35 @@
     "configuration": {
       "title": "Remote image converter",
       "properties": {
-         "remotetolocalimagevscode.imagespath":{
+        "remotetolocalimagevscode.imagespath": {
           "name": "Image path",
-           "type": "string",
-           "default": "/images",
-           "description": "Default path for images, relative to workspace root. leave empty to place in root folder"
-         },
-         "remotetolocalimagevscode.imagename":{
+          "type": "string",
+          "default": "/images",
+          "description": "Default path for images, relative to workspace root. leave empty to place in root folder"
+        },
+        "remotetolocalimagevscode.imagename": {
           "type": "string",
           "default": "${rawdate}",
           "description": "The generated name of images. Add formats with ${}. if image already exists a index will be added. Available options: workspacename, formatteddate, rawdate"
         }
       }
-   }
+    }
   },
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "node ./test/runTest.js",  
+    "test": "node ./test/runTest.js",
     "vscode:prepublish": "npm run esbuild-base -- --minify",
     "esbuild-base": "esbuild ./extension.js --bundle --outfile=out/main.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "test-compile": "tsc -p ./"
-},
+  },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
     "@types/vscode": "^1.82.0",
-    "esbuild": "^0.19.4",
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
     "mocha": "^10.2.0",
@@ -70,6 +69,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "axios-extensions": "^3.1.6",
     "chalk": "^5.3.0",
     "commander": "^11.0.0"
   }
